refact: api docs
